package fr.fges.command;

public interface UndoAction {
    String undo();
}
