classDiagram
    %% --- DATA ---
    class GameRepository {
        <<interface>>
        +load() List~BoardGame~
        +save(games : List~BoardGame~) void
    }
    class JsonGameRepository {
        -filepath : String
        +JsonGameRepository(filepath : String)
        +load() List~BoardGame~
        +save(games : List~BoardGame~) void
    }
    class CsvGameRepository {
        -filePath : String
        +CsvGameRepository(filePath : String)
        +load() List~BoardGame~
        +save(games : List~BoardGame~) void
    }
    class DataFactory {
        +createRepository(fileName : String) GameRepository
    }

    %% --- DOMAIN ---
    class BoardGame {
        <<record>>
        +title : String
        +minPlayers : int
        +maxPlayers : int
        +category : String
    }
    class GameCollection {
        -games : List~BoardGame~
        -gameRepository : GameRepository
        +GameCollection(gameRepository : GameRepository)
        +addGame(game : BoardGame) void
        +removeGame(game : BoardGame) void
        +getGames() List~BoardGame~
        +viewAllGames() List~BoardGame~
        +alreadyExist(game : BoardGame) boolean
        +recommendGame(nbPlayer : int) Optional~BoardGame~
        +getRandomGames(count : int) List~BoardGame~
        +getAllGamesNumberMatch(nbPlayer : int) List~BoardGame~
    }
    class GameUI {
        +showErrorAlreadyExist(title : String) void
        +showSuccessAddGame(title : String) void
        +showErrorEmptyList() void
        +showGame(game : BoardGame) void
        +showErrorNoMatch() void
        +showRecommendedGame(game : BoardGame) void
        +showErrorNotEnoughGames(count : int) void
        +showList(games : List~BoardGame~) void
        +showSummary(games : List~BoardGame~) void
        +showError(msg : String) void
    }

    %% --- COMMAND ---
    class Command {
        <<interface>>
        +execute() void
        +getDescription() String
    }

    class InteractiveCommand {
        -gameCollection : GameCollection
        -scanner : Scanner
        +InteractiveCommand(gameCollection : GameCollection, scanner : Scanner)
        +getUserInput(prompt : String) String
    }

    class AddGameCommand {
        -gameUI : GameUI
        -history : CommandHistory
        +AddGameCommand(GameCollection, Scanner, CommandHistory)
        +execute() void
        +getDescription() String
    }
    class RemoveGameCommand {
        -gameUI : GameUI
        -history : CommandHistory
        +RemoveGameCommand(GameCollection, Scanner, CommandHistory)
        +execute() void
        +getDescription() String
    }
    class ListGameCommand {
        -gameUI : GameUI
        +ListGameCommand(GameCollection)
        +execute() void
        +getDescription() String
    }
    class RecommendGameCommand {
        -gameUI : GameUI
        +RecommendGameCommand(GameCollection, Scanner)
        +execute() void
        +getDescription() String
    }
    class SummaryCommand {
        -gameUI : GameUI
        +SummaryCommand(GameCollection, Scanner)
        +execute() void
        +getDescription() String
    }
    class ExitCommand {
        +ExitCommand(GameCollection, Scanner)
        +ExitCommand()
        +execute() void
        +getDescription() String
    }

    class AllGamesNumberMatchCommand {
        -gameUI : GameUI
        +AllGamesNumberMatchCommand(GameCollection, Scanner)
        +execute() void
        +getDescription() String
    }

    class UndoCommand {
        -history : CommandHistory
        -gameUI : GameUI
        +UndoCommand(GameCollection, Scanner, CommandHistory)
        +execute() void
        +getDescription()
    }

    class CommandHistory {
        -history : Stack~UndoAction~
        +push(action : UndoAction) void
        +undo(gameUI: GameUI) void
    }

    class CommandFactory {
        -gameCollection : GameCollection
        -scanner : Scanner
        +CommandFactory(gameCollection : GameCollection, scanner : Scanner)
        +createCommands() Map~String, Command~
        +isWeekend() boolean
    }

    class UndoAction {
        <<interface>>
        +undo() String
    }

    %% --- UI ---
    class Menu {
        -commands : Map~String, Command~
        -scanner : Scanner
        +Menu(commands : Map~String, Command~, scanner : Scanner)
        +run() void
        +displayMainMenu() void
    }
    class Main {
        +main(args : String[]) void
    }

    %% --- RELATIONS ---
    JsonGameRepository ..|> GameRepository : implements
    CsvGameRepository ..|> GameRepository : implements
    GameCollection --> GameRepository : uses (Dependency Injection)
    GameCollection o-- BoardGame : contains

    Menu o-- Command : contains

    Main ..> DataFactory : uses
    DataFactory ..> GameRepository : creates
    Main ..> CommandFactory : uses
    CommandFactory ..> Command : creates
    CommandFactory --> GameCollection : uses
    Main ..> GameCollection : creates
    Main ..> Menu : creates

    CommandFactory ..> CommandHistory : creates
    CommandHistory o-- UndoAction : contains
    AddGameCommand --> CommandHistory : uses
    RemoveGameCommand --> CommandHistory : uses
    UndoCommand --> CommandHistory : uses

    AddGameCommand ..> GameUI : uses
    RemoveGameCommand ..> GameUI : uses
    ListGameCommand ..> GameUI : uses
    RecommendGameCommand ..> GameUI : uses
    SummaryCommand ..> GameUI : uses
    ExitCommand ..> GameUI : uses
    AllGamesNumberMatchCommand ..> GameUI : uses
    UndoCommand ..> GameUI : uses

    InteractiveCommand <|-- AddGameCommand
    InteractiveCommand <|-- RemoveGameCommand
    InteractiveCommand <|-- ListGameCommand
    InteractiveCommand <|-- RecommendGameCommand
    InteractiveCommand <|-- SummaryCommand
    InteractiveCommand <|-- ExitCommand
    InteractiveCommand <|-- AllGamesNumberMatchCommand
    InteractiveCommand <|-- UndoCommand

    Command <|.. InteractiveCommand
    Command <|.. AddGameCommand
    Command <|.. RemoveGameCommand
    Command <|.. ListGameCommand
    Command <|.. RecommendGameCommand
    Command <|.. SummaryCommand
    Command <|.. AllGamesNumberMatchCommand
    Command <|.. UndoCommand
    Command <|.. ExitCommand